<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.add_schedules">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/et_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spin_item"
        android:layout_width="174dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title" />

    <EditText
        android:id="@+id/et_type"
        android:layout_width="126dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/et_type"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/spin_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@+id/spin_item" />

    <EditText
        android:id="@+id/et_qty"
        android:layout_width="173dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/et_qty"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_item" />

    <EditText
        android:id="@+id/et_Vno"
        android:layout_width="194dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/et_Vno"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/et_time2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_date" />

    <EditText
        android:id="@+id/et_date"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/et_date"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/et_time"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_qty" />

    <EditText
        android:id="@+id/et_time"
        android:layout_width="142dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/et_time"
        android:inputType="time"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/et_date" />

    <EditText
        android:id="@+id/et_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/et_destination"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Vno" />

    <EditText
        android:id="@+id/et_time2"
        android:layout_width="129dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/et_time2"
        android:inputType="time"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_Vno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/et_Vno" />

    <Button
        android:id="@+id/brn_addS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_destination" />

</androidx.constraintlayout.widget.ConstraintLayout>