<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="175dp"
    android:layout_marginTop="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="424dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="16dp"
            android:text="@string/et_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/W_tv_item"
            android:layout_width="304dp"
            android:layout_height="38dp"
            app:layout_constraintStart_toStartOf="@+id/textView34"
            app:layout_constraintTop_toBottomOf="@+id/textView34" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/et_qty"
            app:layout_constraintStart_toStartOf="@+id/W_tv_item"
            app:layout_constraintTop_toBottomOf="@+id/W_tv_item" />

        <TextView
            android:id="@+id/w_tv_qty"
            android:layout_width="217dp"
            android:layout_height="37dp"
            app:layout_constraintStart_toStartOf="@+id/textView37"
            app:layout_constraintTop_toBottomOf="@+id/textView37" />

        <Button
            android:id="@+id/Wbutton_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/btn_delete"
            app:layout_constraintStart_toEndOf="@+id/w_tv_qty"
            app:layout_constraintTop_toTopOf="@+id/w_tv_qty" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>